--- a/src/app/main/content/e-commerce/orders/orders.component.html
+++ b/src/app/main/content/e-commerce/orders/orders.component.html
@@ -105,7 +105,7 @@
                     <mat-header-cell *cdkHeaderCellDef mat-sort-header fxHide fxShow.gt-sm>Date</mat-header-cell>
                     <mat-cell *cdkCellDef="let order" fxHide fxShow.gt-sm>
                         <p class="text-truncate">
-                            {{order.status_date}}
+                            {{order.status_date | date:'short'}}
                         </p>
                     </mat-cell>
                 </ng-container>
