save shoppingcart with local storage

--- a/src/app/main/content/webshop/checkout/checkout.component.html
+++ b/src/app/main/content/webshop/checkout/checkout.component.html
@@ -92,9 +92,8 @@
                   </tr>
                 </tfoot>
               </table>
+              <button (click)="checkoutOrder(1)" class="mat-accent compose-dialog-button mat-raised-button mat-button">Complete Order</button>
             </div>
-
-            <button (click)="checkout(1)" class="mat-accent compose-dialog-button mat-raised-button mat-button">Complete Order</button>
           </mat-tab>
 
           <mat-tab label="Invoice">
