--- a/src/app/main/content/e-commerce/order/order.component.html
+++ b/src/app/main/content/e-commerce/order/order.component.html
@@ -227,13 +227,12 @@
 
                                 <mat-form-field class="mr-16" fxFlex>
                                   <input formControlName="paymentDate" matInput [matDatepicker]="picker"
-                                         placeholder="Choose a date" required pattern="\d{1,2}/\d{1,2}/\d{4}">
+                                         placeholder="Choose a date" required>
                                   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                   <mat-datepicker #picker></mat-datepicker>
                                 </mat-form-field>
 
-
-                                <button (click)="addPaymentToOrder(order)" mat-raised-button class="mat-accent" [disabled]="paymentForm.invalid">
+                                <button (click)="addPaymentToOrder(order, orderItems)" mat-raised-button class="mat-accent" [disabled]="paymentForm.invalid">
                                   Update Payment
                                 </button>
                                 <button (click)="paymentForm.reset()" mat-raised-button class="mat-warn" [disabled]="paymentForm.invalid">
