clean up and dissable categories

--- a/src/app/main/content/webshop/store/store.component.html
+++ b/src/app/main/content/webshop/store/store.component.html
@@ -32,7 +32,7 @@
                 <mat-card-header>
                   <mat-card-title><h3>{{product.name}}</h3></mat-card-title>
                   <!--<mat-card-subtitle>-->
-                    <!--<span *ngFor="let category of product.categories">{{category}} | </span>-->
+                    <!--<span>{{product.categories}} | </span>-->
                   <!--</mat-card-subtitle>-->
                 </mat-card-header>
                 <a routerLink="/product-detail/{{product.id}}">
